added proxies endpoint and related classes and components, generated documentation
